--- a/tex/2012/3/2.tex
+++ b/tex/2012/3/2.tex
@@ -27,19 +27,19 @@
               \ln(1 - x) = -\sum_{k = 0}^{n} \ln(1 + x^{2^{k}}) + \ln(1 - x^{2^{n + 1}}).
           \]
 
-          Let \(n \to +\infty\). \(2^{n + 1} \to +\infty\), and since \(\abs*{x} < 1\), we have \(x^{2^{n + 1}} \to 0\), and hence
+          Let \(n \to \infty\). \(2^{n + 1} \to \infty\), and since \(\abs*{x} < 1\), we have \(x^{2^{n + 1}} \to 0\), and hence
           \[
-              \ln(1 - x) = -\sum_{k = 0}^{+\infty} \ln(1 + x^{2^{k}}) + \ln(1) = -\sum_{k = 0}^{+\infty} \ln(1 + x^{2^{k}}),
+              \ln(1 - x) = -\sum_{k = 0}^{\infty} \ln(1 + x^{2^{k}}) + \ln(1) = -\sum_{k = 0}^{\infty} \ln(1 + x^{2^{k}}),
           \]
           as desired.
 
           Differentiating both sides with respect to \(x\), we have
           \[
-              - \frac{1}{1 - x} = - \sum_{k = 0}^{+\infty} \frac{2^k x^{2^k - 1}}{1 + x^{2^k}},
+              - \frac{1}{1 - x} = - \sum_{k = 0}^{\infty} \frac{2^k x^{2^k - 1}}{1 + x^{2^k}},
           \]
           and hence
           \[
-              \frac{1}{1 - x} = \sum_{k = 0}^{+\infty} \frac{2^k x^{2^k - 1}}{1 + x^{2^k}},
+              \frac{1}{1 - x} = \sum_{k = 0}^{\infty} \frac{2^k x^{2^k - 1}}{1 + x^{2^k}},
           \]
           exactly as desired.
 
@@ -72,14 +72,14 @@
               \ln (1 + x + x^2) = -\sum_{k = 1}^{n} \ln(1 - x^{2^{k - 1}} + x^{2^k}) + \ln(1 + x^{2^n} + x^{2^{n + 1}}).
           \]
 
-          Let \(n \to +\infty\), we have \(2^n, 2^{n + 1} \to +\infty\), and since \(\abs*{x} < 1\), we must have \(x^{2^n}, x^{2^{n + 1}} \to +\infty\), and hence \(\ln(1 + x^{2^n} + x^{2^{n + 1}}) \to 0\). Hence,
+          Let \(n \to \infty\), we have \(2^n, 2^{n + 1} \to \infty\), and since \(\abs*{x} < 1\), we must have \(x^{2^n}, x^{2^{n + 1}} \to \infty\), and hence \(\ln(1 + x^{2^n} + x^{2^{n + 1}}) \to 0\). Hence,
           \[
-              \ln (1 + x + x^2) = - \sum_{k = 1}^{+\infty} \ln(1 - x^{2^{k - 1}} + x^{2^k}).
+              \ln (1 + x + x^2) = - \sum_{k = 1}^{\infty} \ln(1 - x^{2^{k - 1}} + x^{2^k}).
           \]
 
           Differentiating both sides with respect to \(x\), we get
           \[
-              \frac{1 + 2x}{1 + x + x^2} = - \sum_{k = 1}^{+\infty} \frac{- 2^{k - 1} x^{2^{k - 1} - 1} + 2^{k} x^{2^{k} - 1} }{1 - x^{2^{k - 1}} + x^{2^k}} = \sum_{k = 1}^{+\infty} \frac{2^{k - 1} x^{2^{k - 1} - 1} - 2^{k} x^{2^{k} - 1} }{1 - x^{2^{k - 1}} + x^{2^k}},
+              \frac{1 + 2x}{1 + x + x^2} = - \sum_{k = 1}^{\infty} \frac{- 2^{k - 1} x^{2^{k - 1} - 1} + 2^{k} x^{2^{k} - 1} }{1 - x^{2^{k - 1}} + x^{2^k}} = \sum_{k = 1}^{\infty} \frac{2^{k - 1} x^{2^{k - 1} - 1} - 2^{k} x^{2^{k} - 1} }{1 - x^{2^{k - 1}} + x^{2^k}},
           \]
           which is exactly what is desired.
 \end{enumerate}
