--- a/tex/2012/3/8.tex
+++ b/tex/2012/3/8.tex
@@ -48,11 +48,11 @@
           \]
           and therefore
           \begin{align*}
-              \sum_{r = 1}^{+\infty} \arctan \left(\frac{1}{F_{2r + 1}}\right) & = \sum_{r = 1}^{+\infty} \arctan \left(\frac{1}{F_{2r}}\right) - \sum_{r = 1}^{+\infty} \arctan \left(\frac{1}{F_{2r + 2}}\right) \\
-                                                                               & = \sum_{r = 1}^{+\infty} \arctan \left(\frac{1}{F_{2r}}\right) - \sum_{r = 2}^{+\infty} \arctan \left(\frac{1}{F_{2r}}\right)     \\
-                                                                               & = \arctan \left(\frac{1}{F_{2 \cdot 1}}\right)                                                                                    \\
-                                                                               & = \arctan \left(\frac{1}{F_2}\right)                                                                                              \\
-                                                                               & = \arctan \left(1\right)                                                                                                          \\
-                                                                               & = \frac{\pi}{4}.
+              \sum_{r = 1}^{\infty} \arctan \left(\frac{1}{F_{2r + 1}}\right) & = \sum_{r = 1}^{\infty} \arctan \left(\frac{1}{F_{2r}}\right) - \sum_{r = 1}^{\infty} \arctan \left(\frac{1}{F_{2r + 2}}\right) \\
+                                                                              & = \sum_{r = 1}^{\infty} \arctan \left(\frac{1}{F_{2r}}\right) - \sum_{r = 2}^{\infty} \arctan \left(\frac{1}{F_{2r}}\right)     \\
+                                                                              & = \arctan \left(\frac{1}{F_{2 \cdot 1}}\right)                                                                                  \\
+                                                                              & = \arctan \left(\frac{1}{F_2}\right)                                                                                            \\
+                                                                              & = \arctan \left(1\right)                                                                                                        \\
+                                                                              & = \frac{\pi}{4}.
           \end{align*}
 \end{enumerate}
