--- a/tex/2014/3/1.tex
+++ b/tex/2014/3/1.tex
@@ -12,9 +12,9 @@ and by comparing coefficients we have
 \begin{enumerate}
     \item Using the identities for the logarithms, we have
           \begin{align*}
-              \ln(1 + qx^2 + rx^3) & = \ln(1 + ax) + \ln(1 + bx) + \ln(1 + cx)                                                                                                                            \\
-                                   & = \sum_{k = 1}^{+\infty} (-1)^{k + 1} \frac{(ax)^k}{k} + \sum_{k = 1}^{+\infty} (-1)^{k + 1} \frac{(bx)^k}{k} + \sum_{k = 1}^{+\infty} (-1)^{k + 1} \frac{(cx)^k}{k} \\
-                                   & = \sum_{k = 1}^{+\infty} (-1)^{k + 1} x^k \frac{a^k + b^k + c^k}{k},
+              \ln(1 + qx^2 + rx^3) & = \ln(1 + ax) + \ln(1 + bx) + \ln(1 + cx)                                                                                                                         \\
+                                   & = \sum_{k = 1}^{\infty} (-1)^{k + 1} \frac{(ax)^k}{k} + \sum_{k = 1}^{\infty} (-1)^{k + 1} \frac{(bx)^k}{k} + \sum_{k = 1}^{\infty} (-1)^{k + 1} \frac{(cx)^k}{k} \\
+                                   & = \sum_{k = 1}^{\infty} (-1)^{k + 1} x^k \frac{a^k + b^k + c^k}{k},
           \end{align*}
           and hence
           \[
