--- a/tex/2014/3/8.tex
+++ b/tex/2014/3/8.tex
@@ -32,7 +32,7 @@ Notice that there are \((k^{n + 1} - 1) - k^n + 1 = k^{n + 1} - k^n = k^n (k - 1
 
           Let \(N \to \infty\), the weak inequality remains. This gives
           \[
-              \sum_{r = 1}^{+\infty} \frac{1}{r^3} \leq \frac{4}{3} \cdot 1 = \frac{4}{3}
+              \sum_{r = 1}^{\infty} \frac{1}{r^3} \leq \frac{4}{3} \cdot 1 = \frac{4}{3}
           \]
           as desired.
 
