--- a/tex/2015/3/1.tex
+++ b/tex/2015/3/1.tex
@@ -3,9 +3,9 @@
 \begin{enumerate}
     \item We have
           \begin{align*}
-              I_n - I_{n + 1} & = \int_0^{+\infty} \frac{1}{(1 + u^2)^n} \Diff{x} - \int_0^{+\infty} \frac{1}{(1 + u^2)^{n + 1}} \Diff x \\
-                              & = \int_0^{+\infty} \frac{(1 + u^2) - 1}{(1 + u^2)^{n + 1}} \Diff{x}                                      \\
-                              & = \int_0^{+\infty} \frac{u^2}{(1 + u^2)^{n + 1}} \Diff{x}.
+              I_n - I_{n + 1} & = \int_0^{\infty} \frac{1}{(1 + u^2)^n} \Diff{x} - \int_0^{\infty} \frac{1}{(1 + u^2)^{n + 1}} \Diff x \\
+                              & = \int_0^{\infty} \frac{(1 + u^2) - 1}{(1 + u^2)^{n + 1}} \Diff{x}                                     \\
+                              & = \int_0^{\infty} \frac{u^2}{(1 + u^2)^{n + 1}} \Diff{x}.
           \end{align*}
 
           Notice that
@@ -19,10 +19,10 @@
 
           Using integration by parts, we have
           \begin{align*}
-              I_n - I_{n + 1} & = \int_0^{+\infty} \frac{u^2}{(1 + u^2)^{n + 1}} \Diff{x}                                                                  \\
-                              & = \int_0^{+\infty} \left[ - \frac{u\Diff{(1 + u^2)^{-n}}}{2n}\right]                                                       \\
-                              & = \frac{1}{2n}\left[\int_0^{+\infty} \frac{\Diff{u}}{(1 + u^2)^n} - \left[u \cdot (1 + u^2)^{-n}\right]^{+\infty}_0\right] \\
-                              & = \frac{1}{2n} \left[I_n - (0 - 0)\right]                                                                                  \\
+              I_n - I_{n + 1} & = \int_0^{\infty} \frac{u^2}{(1 + u^2)^{n + 1}} \Diff{x}                                                                 \\
+                              & = \int_0^{\infty} \left[ - \frac{u\Diff{(1 + u^2)^{-n}}}{2n}\right]                                                      \\
+                              & = \frac{1}{2n}\left[\int_0^{\infty} \frac{\Diff{u}}{(1 + u^2)^n} - \left[u \cdot (1 + u^2)^{-n}\right]^{\infty}_0\right] \\
+                              & = \frac{1}{2n} \left[I_n - (0 - 0)\right]                                                                                \\
                               & = \frac{1}{2n} I_n,
           \end{align*}
           as desired.
@@ -34,7 +34,7 @@
 
           Notice that
           \[
-              I_1 = \int_0^{+\infty} \frac{\Diff u}{1 + u^2} = \left[\arctan u\right]^{+\infty}_0 = \frac{\pi}{2},
+              I_1 = \int_0^{\infty} \frac{\Diff u}{1 + u^2} = \left[\arctan u\right]^{\infty}_0 = \frac{\pi}{2},
           \]
           and therefore, we have
           \begin{align*}
@@ -68,38 +68,38 @@
           \end{align*}
           as desired.
 
-    \item If we do the substitution \(u = \frac{1}{x}\), we will have \(u \to 0^{+}\) as \(x \to +\infty\), and \(u \to +\infty\) as \(x \to 0^{+}\). We have \(\Diff u = - \frac{1}{x^2} \Diff x\). Therefore,
+    \item If we do the substitution \(u = \frac{1}{x}\), we will have \(u \to 0^{+}\) as \(x \to \infty\), and \(u \to \infty\) as \(x \to 0^{+}\). We have \(\Diff u = - \frac{1}{x^2} \Diff x\). Therefore,
           \begin{align*}
-              J & = \int_{0}^{+\infty} f((x - x^{-1})^2) \Diff x                    \\
-                & = \int_{+\infty}^{0} f((u^{-1} - u)^2) \left(- x^2 \Diff u\right) \\
-                & = \int_{0}^{+\infty} u^{-2} f((u - u^{-1})^2) \Diff u,
+              J & = \int_{0}^{\infty} f((x - x^{-1})^2) \Diff x                    \\
+                & = \int_{\infty}^{0} f((u^{-1} - u)^2) \left(- x^2 \Diff u\right) \\
+                & = \int_{0}^{\infty} u^{-2} f((u - u^{-1})^2) \Diff u,
           \end{align*}
           which is exactly the first equal sign as desired (since \(u\) is just an arbitrary variable).
 
           For the second equal sign, notice that
           \begin{align*}
-              2J & = J + J                                                                                              \\
-                 & = \int_{0}^{+\infty} f((x - x^{-1})^2) \Diff x + \int_{0}^{+\infty} x^{-2} f((x - x^{-1})^2) \Diff x \\
-                 & = \int_{0}^{+\infty} \left(1 + x^{-2}\right) f((x - x^{-1})^2) \Diff x,
+              2J & = J + J                                                                                            \\
+                 & = \int_{0}^{\infty} f((x - x^{-1})^2) \Diff x + \int_{0}^{\infty} x^{-2} f((x - x^{-1})^2) \Diff x \\
+                 & = \int_{0}^{\infty} \left(1 + x^{-2}\right) f((x - x^{-1})^2) \Diff x,
           \end{align*}
           and therefore
           \[
-              J = \frac{1}{2} \int_{0}^{+\infty} \left(1 + x^{-2}\right) f((x - x^{-1})^2) \Diff x.
+              J = \frac{1}{2} \int_{0}^{\infty} \left(1 + x^{-2}\right) f((x - x^{-1})^2) \Diff x.
           \]
 
-          For the final equal sign, consider the substitution \(u = x - x^{-1}\). Note \(\Diff u = \left(1 + x^{-2}\right) \Diff x\), and when \(x \to 0^{+}\), \(u \to -\infty\), when \(x \to +\infty\), \(u \to +\infty\). Therefore,
+          For the final equal sign, consider the substitution \(u = x - x^{-1}\). Note \(\Diff u = \left(1 + x^{-2}\right) \Diff x\), and when \(x \to 0^{+}\), \(u \to -\infty\), when \(x \to \infty\), \(u \to \infty\). Therefore,
           \begin{align*}
-              J & = \frac{1}{2} \int_{0}^{+\infty} \left(1 + x^{-2}\right) f((x - x^{-1})^2) \Diff x \\
-                & = \frac{1}{2} \int_{-\infty}^{+\infty} f(u^2) \Diff u.
+              J & = \frac{1}{2} \int_{0}^{\infty} \left(1 + x^{-2}\right) f((x - x^{-1})^2) \Diff x \\
+                & = \frac{1}{2} \int_{-\infty}^{\infty} f(u^2) \Diff u.
           \end{align*}
 
           Since \(f(u^2) = f((-u)^2)\) for all \(u \in \RR\), we therefore have
           \[
-              \int_{-\infty}^{0} f(u^2) \Diff u = \int_{0}^{+\infty} f(u^2) \Diff u,
+              \int_{-\infty}^{0} f(u^2) \Diff u = \int_{0}^{\infty} f(u^2) \Diff u,
           \]
           and hence
           \[
-              J = \int_{0}^{+\infty} f(u^2) \Diff u,
+              J = \int_{0}^{\infty} f(u^2) \Diff u,
           \]
           as desired.
 
@@ -112,10 +112,10 @@
 
           Therefore, consider the function \(f_n(x) = \frac{1}{(x + 1)^n}\), we have
           \begin{align*}
-              \int_{0}^{+\infty} \frac{x^{2n - 2}}{(x^4 - x^2 + 1)^n} \Diff x & = \int_{0}^{+\infty} \frac{1}{x^2} \cdot \frac{1}{[(x - x^{-1})^2 + 1]^n} \cdot \Diff x \\
-                                                                              & = \int_0^{+\infty} x^{-2} f_n((x - x^{-1})^2) \Diff x                                   \\
-                                                                              & = \int_0^{+\infty} f_n(u^2) \Diff u                                                     \\
-                                                                              & = \int_0^{+\infty} \frac{\Diff u}{(u^2 + 1)^n}                                          \\
-                                                                              & = \frac{(2n - 2)! \pi}{2^{2n - 1} ((n - 1)!)^2}.
+              \int_{0}^{\infty} \frac{x^{2n - 2}}{(x^4 - x^2 + 1)^n} \Diff x & = \int_{0}^{\infty} \frac{1}{x^2} \cdot \frac{1}{[(x - x^{-1})^2 + 1]^n} \cdot \Diff x \\
+                                                                             & = \int_0^{\infty} x^{-2} f_n((x - x^{-1})^2) \Diff x                                   \\
+                                                                             & = \int_0^{\infty} f_n(u^2) \Diff u                                                     \\
+                                                                             & = \int_0^{\infty} \frac{\Diff u}{(u^2 + 1)^n}                                          \\
+                                                                             & = \frac{(2n - 2)! \pi}{2^{2n - 1} ((n - 1)!)^2}.
           \end{align*}
 \end{enumerate}
