--- a/tex/2015/3/4.tex
+++ b/tex/2015/3/4.tex
@@ -3,7 +3,7 @@
 \begin{enumerate}
     \item Let \(f(z) = z^3 + az^2 + bz + c\). If we restrict the domain to the reals, we have
           \[
-              \lim_{x \to +\infty} f(x) = +\infty, \lim_{x \to -\infty} f(x) = -\infty.
+              \lim_{x \to \infty} f(x) = \infty, \lim_{x \to -\infty} f(x) = -\infty.
           \]
 
           By the definition of a limit, this means that \(f(x) > 0\) for sufficiently big \(x\)s (say, for all \(x \geq A\)), and \(f(x) < 0\) for sufficiently small \(x\)s (say, for all \(x \leq B\)).
