--- a/tex/2015/3/8.tex
+++ b/tex/2015/3/8.tex
@@ -148,7 +148,7 @@
                         \theta = \frac{1}{2} \cdot \ln\left(-\frac{1}{A}\right).
                     \]
 
-                    Also note that \(r\) is increasing in \(\theta\) in this case, and \(r \to +\infty\) as \(\theta \to\) the asymptote.
+                    Also note that \(r\) is increasing in \(\theta\) in this case, and \(r \to \infty\) as \(\theta \to\) the asymptote.
 
                     \begin{center}
                         \input{\currfiledir 8-diag2.tex}
