--- a/tex/2016/3/4.tex
+++ b/tex/2016/3/4.tex
@@ -45,19 +45,19 @@
 
           Therefore,
           \begin{align*}
-               & \phantom{=} \sum_{r = -\infty}^{\infty} \sech (ry) \sech((r + 1)y)                                                                            \\
-               & = \sum_{r = 1}^{\infty} \sech (ry) \sech((r + 1)y) + \sum_{r = -\infty}^{0} \sech (ry) \sech((r + 1)y)                                        \\
-               & = \sum_{r = 1}^{\infty} \sech (ry) \sech((r + 1)y) + \sum_{r = 0}^{+\infty} \sech (-ry) \sech((-r+1)y)                                        \\
-               & = \sum_{r = 1}^{\infty} \sech (ry) \sech((r + 1)y) + \sum_{r = 0}^{+\infty} \sech (ry) \sech((r-1)y)                                          \\
-               & = \sum_{r = 1}^{\infty} \sech (ry) \sech((r + 1)y) + \sum_{r = 2}^{+\infty} \sech (ry) \sech((r-1)y) + \sech(y) \sech(0) + \sech(0) \sech(-y) \\
-               & = \sum_{r = 1}^{\infty} \sech (ry) \sech((r + 1)y) + \sum_{r = 1}^{+\infty} \sech ((r + 1)y) \sech(ry) + 2\sech y                             \\
-               & = 4e^{-y} \cosech (2y) + 2 \sech y                                                                                                            \\
-               & = \frac{4e^{-y}}{\sinh 2y} + \frac{2}{\cosh y}                                                                                                \\
-               & = \frac{2e^{-y}}{\sinh y \cosh y} + \frac{2}{\cosh y}                                                                                         \\
-               & = \frac{2e^{-y} + 2 \sinh y}{\sinh y \cosh y}                                                                                                 \\
-               & = \frac{2 e^{-y} + e^{y} - e^{-y}} {\sinh y \cosh y}                                                                                          \\
-               & = \frac{e^y - e^{-y}}{\sinh y \cosh y}                                                                                                        \\
-               & = \frac{2 \cosh y}{\sinh y \cosh y}                                                                                                           \\
+               & \phantom{=} \sum_{r = -\infty}^{\infty} \sech (ry) \sech((r + 1)y)                                                                           \\
+               & = \sum_{r = 1}^{\infty} \sech (ry) \sech((r + 1)y) + \sum_{r = -\infty}^{0} \sech (ry) \sech((r + 1)y)                                       \\
+               & = \sum_{r = 1}^{\infty} \sech (ry) \sech((r + 1)y) + \sum_{r = 0}^{\infty} \sech (-ry) \sech((-r+1)y)                                        \\
+               & = \sum_{r = 1}^{\infty} \sech (ry) \sech((r + 1)y) + \sum_{r = 0}^{\infty} \sech (ry) \sech((r-1)y)                                          \\
+               & = \sum_{r = 1}^{\infty} \sech (ry) \sech((r + 1)y) + \sum_{r = 2}^{\infty} \sech (ry) \sech((r-1)y) + \sech(y) \sech(0) + \sech(0) \sech(-y) \\
+               & = \sum_{r = 1}^{\infty} \sech (ry) \sech((r + 1)y) + \sum_{r = 1}^{\infty} \sech ((r + 1)y) \sech(ry) + 2\sech y                             \\
+               & = 4e^{-y} \cosech (2y) + 2 \sech y                                                                                                           \\
+               & = \frac{4e^{-y}}{\sinh 2y} + \frac{2}{\cosh y}                                                                                               \\
+               & = \frac{2e^{-y}}{\sinh y \cosh y} + \frac{2}{\cosh y}                                                                                        \\
+               & = \frac{2e^{-y} + 2 \sinh y}{\sinh y \cosh y}                                                                                                \\
+               & = \frac{2 e^{-y} + e^{y} - e^{-y}} {\sinh y \cosh y}                                                                                         \\
+               & = \frac{e^y - e^{-y}}{\sinh y \cosh y}                                                                                                       \\
+               & = \frac{2 \cosh y}{\sinh y \cosh y}                                                                                                          \\
                & = 2 \cosech y.
           \end{align*}
 \end{enumerate}
