--- a/tex/2018/3/1.tex
+++ b/tex/2018/3/1.tex
@@ -19,14 +19,14 @@
 
           This means the only stationary point of \(y = f(\beta)\) is \((-1, f(-1) = -1)\).
 
-          For the limiting behaviour of the function, we first look at the case where \(\beta > 0\). As \(\beta \to +\infty\), we have \(f(\beta) \to \beta\) from below. As \(\beta \to 0^{+}\), we have \(f(\beta) \to -\frac{1}{\beta} - \frac{1}{\beta^2} \to -\infty\).
+          For the limiting behaviour of the function, we first look at the case where \(\beta > 0\). As \(\beta \to \infty\), we have \(f(\beta) \to \beta\) from below. As \(\beta \to 0^{+}\), we have \(f(\beta) \to -\frac{1}{\beta} - \frac{1}{\beta^2} \to -\infty\).
 
           When \(\beta < 0\), we use the substitution \(t = -\frac{1}{\beta}\) to make the behaviours more convincing, and hence
           \[
               f(\beta) = \beta + t - t^2.
           \]
 
-          As \(\beta \to 0^{-}\), we have \(t \to +\infty\), and \(f(\beta) \to t - t^2 \to -\infty\). As \(\beta \to -\infty\), we have \(t \to 0^{+}\), and \(f(\beta) \to \beta\) from above, since \(t - t^2 = t (1 - t) > 0\) when \(0 < t < 1\).
+          As \(\beta \to 0^{-}\), we have \(t \to \infty\), and \(f(\beta) \to t - t^2 \to -\infty\). As \(\beta \to -\infty\), we have \(t \to 0^{+}\), and \(f(\beta) \to \beta\) from above, since \(t - t^2 = t (1 - t) > 0\) when \(0 < t < 1\).
 
           This means the curve \(y = f(\beta)\) is as below.
 
@@ -57,7 +57,7 @@
               g(\beta) = \beta - 3t - t^2.
           \]
 
-          As \(\beta \to +\infty\), \(t \to 0^{-}\), and hence \(f(\beta) \to \beta\) from below, since \(-3t - t^2 = - t(t + 3) > 0\) for \(-3 < t < 0\). As \(\beta \to 0^{+}\), \(t \to -\infty\), and hence \(f(\beta) \to -3t - t^2 \to -\infty\).
+          As \(\beta \to \infty\), \(t \to 0^{-}\), and hence \(f(\beta) \to \beta\) from below, since \(-3t - t^2 = - t(t + 3) > 0\) for \(-3 < t < 0\). As \(\beta \to 0^{+}\), \(t \to -\infty\), and hence \(f(\beta) \to -3t - t^2 \to -\infty\).
 
           When \(\beta < 0\), we have as \(\beta \to 0^{-}\), \(f(\beta) \to -\infty\). As \(\beta \to -\infty\), \(f(\beta) \to \beta\) from below.
 
@@ -106,7 +106,7 @@
 
           This cubic has exactly one real root \(\beta = 1\), so the solution to this inequality is \(\beta \leq 1\) and \(\beta \neq 0\).
 
-          Notice that \(f\) is increasing on \((0, 1] \subset (0, +\infty)\). Therefore, for \(\beta > 0\),
+          Notice that \(f\) is increasing on \((0, 1] \subset (0, \infty)\). Therefore, for \(\beta > 0\),
           \[
               f(\beta) \leq f(1) = 1 - 1 - 1 = -1.
           \]
