--- a/tex/2018/3/5.tex
+++ b/tex/2018/3/5.tex
@@ -38,9 +38,9 @@
 
           When \(x \in (0, 1), x^k \in (0, 1), f'(x) < 0\), and hence \(f\) is strictly decreasing.
 
-          When \(x \in (1, +\infty), x^k \in (1, +\infty), f'(x) > 0\), and hence \(f\) is strictly increasing.
+          When \(x \in (1, \infty), x^k \in (1, \infty), f'(x) > 0\), and hence \(f\) is strictly increasing.
 
-          Hence, \(f(1)\) is the minimum for \(f\) on \((0, +\infty)\). This means for all \(x \in (0, +\infty)\), we have
+          Hence, \(f(1)\) is the minimum for \(f\) on \((0, \infty)\). This means for all \(x \in (0, \infty)\), we have
           \[
               f(x) \geq f(1) = 1^{k + 1} - (k + 1) + k = 0,
           \]
