--- a/tex/2010/3/12.tex
+++ b/tex/2010/3/12.tex
@@ -2,14 +2,14 @@
 
 Since
 \[
-    S = \sum_{n = 0}^{+\infty} (1 + nd) r^n,
+    S = \sum_{n = 0}^{\infty} (1 + nd) r^n,
 \]
 we have
 \begin{align*}
-    (1 - r)S & = S - rS                                                                          \\
-             & = \sum_{n = 0}^{+\infty} (1 + nd) r^n - \sum_{n = 0}^{+\infty} (1 + nd) r^{n + 1} \\
-             & = \sum_{n = 0}^{+\infty} (1 + nd) r^n - \sum_{n = 1}^{+\infty} (1 + (n - 1)d) r^n \\
-             & = 1 + \sum_{n = 1}^{+\infty} d r^n                                                \\
+    (1 - r)S & = S - rS                                                                        \\
+             & = \sum_{n = 0}^{\infty} (1 + nd) r^n - \sum_{n = 0}^{\infty} (1 + nd) r^{n + 1} \\
+             & = \sum_{n = 0}^{\infty} (1 + nd) r^n - \sum_{n = 1}^{\infty} (1 + (n - 1)d) r^n \\
+             & = 1 + \sum_{n = 1}^{\infty} d r^n                                               \\
              & = 1 + \frac{dr}{1 - r},
 \end{align*}
 and hence
@@ -26,9 +26,9 @@ The probability mass function for \(X\) satisfies
 \]
 and hence
 \begin{align*}
-    \Expt(X) & = \sum_{x = 1}^{+\infty} x \Prob(X = x)                                                \\
-             & = a \cdot \sum_{x = 1}^{+\infty} x (1 - a)^{x - 1}                                     \\
-             & = a \cdot \sum_{x = 0}^{+\infty} (1 + x) (1 - a)^{x}                                   \\
+    \Expt(X) & = \sum_{x = 1}^{\infty} x \Prob(X = x)                                                 \\
+             & = a \cdot \sum_{x = 1}^{\infty} x (1 - a)^{x - 1}                                      \\
+             & = a \cdot \sum_{x = 0}^{\infty} (1 + x) (1 - a)^{x}                                    \\
              & = a \cdot \left[\frac{1}{1 - (1 - a)} + \frac{1 \cdot (1 - a)}{(1 - (1 - a))^2}\right] \\
              & = a \cdot \left[\frac{1}{a} + \frac{1 - a}{a^2}\right]                                 \\
              & = a \cdot \frac{1}{a^2}                                                                \\
