--- a/tex/2011/3/12.tex
+++ b/tex/2011/3/12.tex
@@ -63,12 +63,12 @@ and
 
 By expressing the probability generating function of \(Y\) as a power series, we notice that
 \begin{align*}
-    \text{p.g.f.}_{Y}(t) & = \frac{1 + t}{3 - t}                                                    \\
-                         & = -1 + \frac{4}{3 - t}                                                   \\
-                         & = -1 + \frac{4}{3} \cdot \frac{1}{1 - \frac{t}{3}}                       \\
-                         & = -1 + \frac{4}{3} \sum_{r = 0}^{+\infty} \left(\frac{t}{3}\right)^r     \\
-                         & = -1 + \frac{4}{3} + \frac{4}{3} \sum_{r = 1}^{+\infty} 3^{-r} \cdot t^r \\
-                         & = \frac{1}{3} + \frac{4}{3} \sum_{r = 1}^{+\infty} 3^{-r} \cdot t^r,
+    \text{p.g.f.}_{Y}(t) & = \frac{1 + t}{3 - t}                                                   \\
+                         & = -1 + \frac{4}{3 - t}                                                  \\
+                         & = -1 + \frac{4}{3} \cdot \frac{1}{1 - \frac{t}{3}}                      \\
+                         & = -1 + \frac{4}{3} \sum_{r = 0}^{\infty} \left(\frac{t}{3}\right)^r     \\
+                         & = -1 + \frac{4}{3} + \frac{4}{3} \sum_{r = 1}^{\infty} 3^{-r} \cdot t^r \\
+                         & = \frac{1}{3} + \frac{4}{3} \sum_{r = 1}^{\infty} 3^{-r} \cdot t^r,
 \end{align*}
 and hence
 \begin{align*}
