--- a/tex/2016/3/13.tex
+++ b/tex/2016/3/13.tex
@@ -29,7 +29,7 @@ as desired.
 
           Therefore,
           \[
-              \Expt(X^4) = \frac{1}{\sigma\sqrt{2\pi}} \int_{-\infty}^{+\infty} x^4 \exp\left(-\frac{x^2}{2\sigma^2}\right) \Diff x.
+              \Expt(X^4) = \frac{1}{\sigma\sqrt{2\pi}} \int_{-\infty}^{\infty} x^4 \exp\left(-\frac{x^2}{2\sigma^2}\right) \Diff x.
           \]
 
           Now, consider using integration by parts. Notice that
@@ -46,9 +46,9 @@ as desired.
 
           Therefore, considering the definite integral, we have
           \begin{align*}
-              \Expt(X^4) & = \frac{1}{\sigma\sqrt{2\pi}} \int_{-\infty}^{+\infty} x^4 \exp\left(-\frac{x^2}{2\sigma^2}\right) \Diff x                                                                                                 \\
-                         & = \frac{\sigma}{\sqrt{2\pi}} \left[3 \int_{-\infty}^{+\infty} x^2 \exp \left(- \frac{x^2}{2\sigma^2}\right)\Diff x - \left[x^3 \exp\left(- \frac{x^2}{2 \sigma^2}\right)\right]^{+\infty}_{-\infty}\right] \\
-                         & = \frac{\sigma}{\sqrt{2\pi}} \left[3 \cdot \sigma \sqrt{2\pi} \cdot \sigma^2 - 0\right]                                                                                                                    \\
+              \Expt(X^4) & = \frac{1}{\sigma\sqrt{2\pi}} \int_{-\infty}^{\infty} x^4 \exp\left(-\frac{x^2}{2\sigma^2}\right) \Diff x                                                                                                \\
+                         & = \frac{\sigma}{\sqrt{2\pi}} \left[3 \int_{-\infty}^{\infty} x^2 \exp \left(- \frac{x^2}{2\sigma^2}\right)\Diff x - \left[x^3 \exp\left(- \frac{x^2}{2 \sigma^2}\right)\right]^{\infty}_{-\infty}\right] \\
+                         & = \frac{\sigma}{\sqrt{2\pi}} \left[3 \cdot \sigma \sqrt{2\pi} \cdot \sigma^2 - 0\right]                                                                                                                  \\
                          & = 3 \sigma^4.
           \end{align*}
 
