--- a/tex/2018/3/13.tex
+++ b/tex/2018/3/13.tex
@@ -2,23 +2,23 @@
 
 By the definition of a probability generating function, we have
 \[
-    G(1) = \sum_{n = 0}^{+\infty} \Prob(X = n), \text{ and } G(-1) = \sum_{n = 0}^{+\infty} (-1)^n \Prob(X = n).
+    G(1) = \sum_{n = 0}^{\infty} \Prob(X = n), \text{ and } G(-1) = \sum_{n = 0}^{\infty} (-1)^n \Prob(X = n).
 \]
 
 Hence,
 \[
-    G(1) + G(-1) = \sum_{n = 0}^{+\infty} [1 + (-1)^n] \Prob(X = n).
+    G(1) + G(-1) = \sum_{n = 0}^{\infty} [1 + (-1)^n] \Prob(X = n).
 \]
 
 When \(n\) is odd, \(1 + (-1)^n = 0\). When \(n\) is even, \(1 + (-1)^n = 2\).
 
 This means
 \[
-    G(1) + G(-1) = 2 \sum_{n = 0}^{+\infty} \Prob(X = 2n),
+    G(1) + G(-1) = 2 \sum_{n = 0}^{\infty} \Prob(X = 2n),
 \]
 which gives
 \[
-    \frac{1}{2} (G(1) + G(-1)) = \sum_{n = 0}^{+\infty} \Prob(X = 2n) = \Prob(X = 0 \text{ or } X = 2 \text{ or } X = 4 \ldots).
+    \frac{1}{2} (G(1) + G(-1)) = \sum_{n = 0}^{\infty} \Prob(X = 2n) = \Prob(X = 0 \text{ or } X = 2 \text{ or } X = 4 \ldots).
 \]
 
 Since \(X \sim \Poisson(\lambda)\), we have
@@ -27,28 +27,28 @@ Since \(X \sim \Poisson(\lambda)\), we have
 \]
 and hence the probability generating function for \(X\), \(G(t)\), must satisfy
 \begin{align*}
-    G(t) & = \sum_{n = 0}^{+\infty} \Prob(X = n) \cdot t^n                      \\
-         & = \sum_{n = 0}^{+\infty} e^{-\lambda} \frac{\lambda^n}{n!} \cdot t^n \\
-         & = e^{-\lambda} \sum_{n = 0}^{+\infty} \frac{(\lambda t)^n}{n!}       \\
-         & = e^{-\lambda} \cdot e^{\lambda t}                                   \\
+    G(t) & = \sum_{n = 0}^{\infty} \Prob(X = n) \cdot t^n                      \\
+         & = \sum_{n = 0}^{\infty} e^{-\lambda} \frac{\lambda^n}{n!} \cdot t^n \\
+         & = e^{-\lambda} \sum_{n = 0}^{\infty} \frac{(\lambda t)^n}{n!}       \\
+         & = e^{-\lambda} \cdot e^{\lambda t}                                  \\
          & = e^{-\lambda (1 - t)}.
 \end{align*}
 
 \begin{enumerate}
     \item Consider \(G(t) + G(-t)\). By definition, we have
           \[
-              G(t) = \sum_{n = 0}^{+\infty} \Prob(X = n) t^n, G(-t) = \sum_{n = 0}^{+\infty} (-1)^n \Prob(X = n) t^n,
+              G(t) = \sum_{n = 0}^{\infty} \Prob(X = n) t^n, G(-t) = \sum_{n = 0}^{\infty} (-1)^n \Prob(X = n) t^n,
           \]
           and hence
           \[
-              G(t) + G(-t) = \sum_{n = 0}^{+\infty} \left(1 + (-1)^n\right) \Prob(X = n) t^n = 2 \sum_{n = 0}^{+\infty} \Prob(X = 2n) t^{2n}.
+              G(t) + G(-t) = \sum_{n = 0}^{\infty} \left(1 + (-1)^n\right) \Prob(X = n) t^n = 2 \sum_{n = 0}^{\infty} \Prob(X = 2n) t^{2n}.
           \]
 
           Let \(H(t)\) be the probability generating function of \(Y\), we have
           \begin{align*}
-              H(t) & = \sum_{n = 0}^{+\infty} \Prob(Y = n) \cdot t^n       \\
-                   & = \sum_{n = 0}^{+\infty} \Prob(Y = 2n) \cdot t^{2n}   \\
-                   & = \sum_{n = 0}^{+\infty} k \Prob(X = 2n) \cdot t^{2n} \\
+              H(t) & = \sum_{n = 0}^{\infty} \Prob(Y = n) \cdot t^n       \\
+                   & = \sum_{n = 0}^{\infty} \Prob(Y = 2n) \cdot t^{2n}   \\
+                   & = \sum_{n = 0}^{\infty} k \Prob(X = 2n) \cdot t^{2n} \\
                    & = \frac{k}{2} \left(G(t) + G(-t)\right).
           \end{align*}
 
@@ -82,7 +82,7 @@ and hence the probability generating function for \(X\), \(G(t)\), must satisfy
 
     \item Consider \(G(t) + G(-t) + G(it) + G(-it)\). By definition, we have
           \[
-              G(t) + G(-t) + G(it) + G(-it) = \sum_{n = 0}^{+\infty} \left(1 + (-1)^n + i^n + (-i)^n\right) \Prob(X = n) \cdot t^n.
+              G(t) + G(-t) + G(it) + G(-it) = \sum_{n = 0}^{\infty} \left(1 + (-1)^n + i^n + (-i)^n\right) \Prob(X = n) \cdot t^n.
           \]
 
           Let \(m\) be an integer. Consider the following four cases:
@@ -95,14 +95,14 @@ and hence the probability generating function for \(X\), \(G(t)\), must satisfy
 
           Hence,
           \[
-              G(t) + G(-t) + G(it) + G(-it) = 4 \sum_{n = 0}^{+\infty} \Prob(X = 4n) \cdot t^{4n}.
+              G(t) + G(-t) + G(it) + G(-it) = 4 \sum_{n = 0}^{\infty} \Prob(X = 4n) \cdot t^{4n}.
           \]
 
           Let \(P(t)\) be the probability generating function of \(Z\), we have
           \begin{align*}
-              P(t) & = \sum_{n = 0}^{+\infty} \Prob(Z = n) \cdot t^n           \\
-                   & = \sum_{n = 0}^{+\infty} \Prob(Z = 4n) \cdot t^{4n}       \\
-                   & = c \sum_{n = 0}^{+\infty} \Prob(X = 4n) \cdot t^{4n}     \\
+              P(t) & = \sum_{n = 0}^{\infty} \Prob(Z = n) \cdot t^n            \\
+                   & = \sum_{n = 0}^{\infty} \Prob(Z = 4n) \cdot t^{4n}        \\
+                   & = c \sum_{n = 0}^{\infty} \Prob(X = 4n) \cdot t^{4n}      \\
                    & = \frac{c}{4} \left(G(t) + G(-t) + G(it) + G(-it)\right).
           \end{align*}
 
